--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body {font-family: Verdana,sans-serif;}
       <a class="navbar-brand" href="home.html">FRESHCO</a>
     </div>
     <ul class="topnav" id="myTopnav">
-      <li class="active"><a href="home.html">Home</a></li>
+      <li class="active"><a href="index.html">Home</a></li>
       <li>  <a onclick="openNav()">Menu</a></li>
       <li><a href="aboutus.html">ABOUT US</a></li>
 	   <li class="icon">
@@ -281,16 +281,16 @@ function myFunction() {
  <div class="row">
     <div class="col-sm-4">
 
-    <div class="panel-body"> <img src="image/callnum/berakas.jpg" alt="Norway" height="250" width="250"></div> 
+    <div class="panel-body"> <img src="image/callnum/berakas.JPG" alt="berakas" height="250" width="250"></div> 
 	
 	</div>
     
 	<div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/batusatu.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/batusatu.JPG" alt="Batu Satu" height="250" width="250"></div>
   </div>
   
     <div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/kbsentral.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/kbsentral.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   </div>
   </div>
@@ -299,18 +299,18 @@ function myFunction() {
 
  <div class="row">
     <div class="col-sm-4">
-    <div class="panel-body"> <img src="image/callnum/parkview.jpg" alt="Norway" height="250" width="250"></div> 
+    <div class="panel-body"> <img src="image/callnum/parkview.JPG" alt="Norway" height="250" width="250"></div> 
 	
   
 	
 	</div>
     
 	<div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/pastamaniabunut.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/pastamaniabunut.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   
     <div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/sushitei.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/sushitei.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   </div>
   </div>
