--- a/cinnabon.html
+++ b/cinnabon.html
@@ -187,10 +187,10 @@ h3{
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">FRESHCO</a>
+       <a class="navbar-brand" href="index.html">FRESHCO</a>
     </div>
      <ul class="topnav" id="myTopnav">
-    <li class="active"><a href="home.html">Home</a></li>
+    <li class="active"><a href="index.html">Home</a></li>
       <li>  <a onclick="openNav()">Menu</a></li>
       <li><a href="aboutus.html">ABOUT US</a></li>
 	   <li class="icon">
