--- a/aboutus.html
+++ b/aboutus.html
@@ -244,12 +244,12 @@ function myFunction() {
 </script>
   
 <div class="container-fluid">
+ <img src="image/freshco.png">
   <h2>Freshco Delivery </h2>
   <h4>ONE STOP FOOD DELIVERY ORDER</h4>      
   <p>This app is created to ease the customer by having the menu on their phone. </p>
   <button class="btn btn-default btn-lg">Get in Touch</button>
-   <div class="absolute"><img src="image/freshco.png"></div>
-</div>
+	</div>
 
 
   
