--- a/index.html
+++ b/index.html
@@ -281,16 +281,16 @@ function myFunction() {
  <div class="row">
     <div class="col-sm-4">
 
-    <div class="panel-body"> <img src="image/callnum/berakas.jpg" alt="Norway" height="250" width="250"></div> 
+    <div class="panel-body"> <img src="image/callnum/berakas.JPG" alt="Norway" height="250" width="250"></div> 
 	
 	</div>
     
 	<div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/batusatu.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/batusatu.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   
     <div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/kbsentral.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/kbsentral.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   </div>
   </div>
@@ -299,18 +299,18 @@ function myFunction() {
 
  <div class="row">
     <div class="col-sm-4">
-    <div class="panel-body"> <img src="image/callnum/parkview.jpg" alt="Norway" height="250" width="250"></div> 
+    <div class="panel-body"> <img src="image/callnum/parkview.JPG" alt="Norway" height="250" width="250"></div> 
 	
   
 	
 	</div>
     
 	<div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/pastamaniabunut.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/pastamaniabunut.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   
     <div class="col-sm-4">
-  <div class="panel-body"> <img src="image/callnum/sushitei.jpg" alt="Norway" height="250" width="250"></div>
+  <div class="panel-body"> <img src="image/callnum/sushitei.JPG" alt="Norway" height="250" width="250"></div>
   </div>
   </div>
   </div>
